Travis runs integration tests too